Fixed some css overlapping and created template for classes page

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 	--light: #ffffff;
 	--black: #000000;
 	--light_grey_bg: #3e3e3e;
+	--dark-grey_bg: #212121;
+	--underline-color: var(--ballet_shoe_pink);
 }
 
 * {
@@ -472,28 +474,16 @@ nav img {
 	margin: auto;
 }
 
-.home_section {
-	min-height: 100vh;
-	justify-content: center;
-	justify-items: center;
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	opacity: 1;
-}
 
 .section-container {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
+	min-height: 100vh;
 }
 
 .odd,
 .row {
 	display: flex;
 	flex-wrap: wrap;
-	height: 100%;
-	width: 85%;
+	width: 80%;
 	align-items: center;
 	margin: auto;
 	padding-top: 50px;
@@ -526,6 +516,52 @@ nav img {
 .home_img img {
 	width: 100%;
 	border-radius: 20px;
+}
+
+.classes_section {
+	padding-top: 100px;
+}
+
+section .title h2 {
+	text-align: center;
+	margin: auto;
+	font-size: 2rem;
+    border-bottom: 5px solid var(--underline-color);
+	border-radius: 5px;
+}
+
+.service_container {
+	display: flex;
+	flex-direction: column;
+	flex: 0 0 33.33%;
+	max-width: 33.33%;
+	height: 100%;
+	justify-content: center;
+	justify-items: center;
+	justify-self: center;
+	align-items: center;
+	text-align: center;
+	padding: 20px;
+}
+
+.service_container h3
+{
+	font-size: 1.5rem;
+}
+
+.service_container .service_inner
+{
+    background-color: var(--dark-grey_bg);
+    border: 1px solid var(--black);
+    border-radius: 10px;
+    padding: 30px 15px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+
+.service_container .service_inner:hover
+{
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.45);
 }
 
 footer {
@@ -605,6 +641,7 @@ footer ul li a:hover i {
 }
 
 @media (max-width: 960px) {
+	.service_container,
 	.home_data {
 		flex: 0 0 100%;
 		max-width: 100%;
